--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,18 +1,21 @@
 {% extends '_base.html' %}
 {% load crispy_forms_tags %}
+{% load i18n %}
 
-{% block title %}Log out{% endblock %}
+{% block title %}{% trans "Sign Out" %}｜{{ site_title }}{% endblock %}
 
 
 {% block content %}
-<h1>Sign Out</h1>
+<h1>{% trans "Sign Out" %}</h1>
+<br>
 
-<p>Are you sure you want to sign out?</p>
+<p>{% trans 'Are you sure you want to sign out?' %}</p>
 
 <form method="post" action="{% url 'account_logout' %}">
   {% csrf_token %}
   {{ form|crispy }}
-  <button class="btn btn-danger" type="submit">Sign Out</button>
+  <br>
+  <button class="btn btn-danger" type="submit">{% trans "Sign Out" %}</button>
 </form>
 
 {% endblock content %}
