--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,13 +1,16 @@
 {% extends '_base.html' %}
 {% load crispy_forms_tags %}
+{% load i18n %}
 
-{% block title %}Password Reset{% endblock %}
+{% block title %}{% trans "Password Reset" %}｜{{ site_title }}{% endblock %}
 
 {% block content %}
-<h2>Forgot your password? </h2>
-<form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+<h1>{% trans "Password Reset" %}</h1>
+<br>
+<form method="post" action="{% url 'account_reset_password' %}" class="password_reset">
   {% csrf_token %}
   {{ form | crispy }}
-  <button class="btn btn-primary" type="submit">Reset Password</button>
+  <br>
+  <button class="btn btn-success" type="submit">{% trans 'Reset My Password' %}</button>
 </form>
 {% endblock content %}
