--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -1,9 +1,19 @@
 {% extends '_base.html' %}
 {% load crispy_forms_tags %}
+{% load i18n %}
+{% load account %}
 
-{% block title %}Password Reset Done{% endblock %}
+{% block title %}{% trans "Password Reset" %}｜{{ site_title }}{% endblock %}
 
 {% block content %}
-<h1>Password Reset</h1>
-<p>We have sent you an e-mail. Please contact us if you do not receive it in a few minutes.</p>
+<h1>{% trans "Password Reset" %}</h1>
+<br>
+{% if user.is_authenticated %}
+{% include "account/snippets/already_logged_in.html" %}
+{% endif %}
+<br>
+<!-- <p>{% blocktrans %}We have sent you an e-mail. If you have not received it please check your spam folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}</p> -->
+<!-- 日本語表記 -->
+<p>メールをお送りしました。 まだ受け取っていない場合は、スパムフォルダを確認してください。 それ以外の場合、数分以内に届かない場合はお問い合わせください。</p>
+<!-- 日本語表記 -->
 {% endblock content %}
