--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -1,9 +1,11 @@
 {% extends '_base.html' %}
 {% load crispy_forms_tags %}
+{% load i18n %}
 
-{% block title %}Change Password Done{% endblock title %}
+{% block title %}{% trans "Password Reset" %}｜{{ site_title }}{% endblock title %}
 
 {% block content %}
-<h1>Password Change Done</h1>
-<p>Your password has been changed.</p>
+<h1>{% trans "Password Reset" %}</h1>
+<br>
+<p>{% trans 'Your password is now changed.' %}</p>
 {% endblock content %}
