--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -1,15 +1,18 @@
 {% extends '_base.html' %}
 {% load crispy_forms_tags %}
+{% load i18n %}
 
-{% block title %}Set Password{% endblock title %}
+{% block title %}{% trans "Set Password" %}｜{{ site_title }}{% endblock title %}
 
 {% block content %}
-<form method="POST" action="" class="password_set">
+<h1>{% trans "Password" %}</h1>
+<br>
+<form method="post" action="" class="password_set">
   {% csrf_token %}
   {{ form | crispy }}
+  <br>
   <div class="form-actions">
-    <button class="btn btn-primary" type="submit" name="action" value="Set Password">Change
-    Password</button>
+    <button class="btn btn-success" type="submit">{% trans 'Set Password' %}</button>
   </div>
 </form>
 {% endblock content %}
