--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,78 +1,102 @@
 {% load static %}
+{% load i18n %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-<title>{% block title %}DjangoX{% endblock title %}</title>
-<meta name="description" content="A framework for launching new Django projects quickly.">
+<title>{% block title %}{{ site_title }}{% endblock title %}</title>
+<meta name="description" content="{% block description %}このサイト...{% endblock description %}">
 <meta name="author" content="">
 <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
 
 {% block css %}
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<!-- Font Awesome CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css" integrity="sha256-mUZM63G8m73Mcidfrv5E+Y61y7a12O5mW4ezU3bxqW4=" crossorigin="anonymous">
 
 <link rel="stylesheet" href="{% static 'css/base.css' %}">
-{% endblock %}
+{% endblock css %}
 </head>
 
 <body>
   <main role="main">
+    {% block main %}
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
       <h5 class="my-0 mr-md-auto font-weight-normal">
-        <a href="{% url 'home' %}">DjangoX</a>
+        <a class=" text-decoration-none" href="{% url 'home' %}">{{ site_title }}</a>
       </h5>
-      <a class="p-2 text-dark" href="{% url 'about' %}">About</a>
-      <nav class="my-2 my-md-0 mr-md-3">
+      {% if show_terms_of_use %}
+      <a class="p-2 text-dark text-decoration-none" href="{% url 'terms' %}">利用規約</a>
+      {% endif %}
+      {% if show_privacy_policy %}
+      <a class="p-2 text-dark text-decoration-none" href="{% url 'privacy_policy' %}">プライバシーポリシー</a>
+      {% endif %}
+      <nav class="my-2 my-md-0 mr-md-3" style="margin-left: 10px;">
         {% if user.is_authenticated %}
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              {{ user.email }}
+              {{ user }}さん
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-              <a class="dropdown-item" href="{% url 'account_change_password' %}">Change password</a>
+              <a class="dropdown-item" href="{% url 'user_information_change' %}">ユーザー情報の変更</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="{% url 'account_logout' %}">Log out</a>
+              <a class="dropdown-item" href="{% url 'account_email' %}">メールアドレスの変更</a>
+              <a class="dropdown-item" href="{% url 'account_change_password' %}">パスワードの変更</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{% url 'account_logout' %}">{% trans "Sign Out" %}</a>
             </div>
           </li>
         </ul>
         {% else %}
         <form class="form-inline ml-auto">
-          <a href="{% url 'account_login' %}" class="btn btn-outline-secondary">Log in</a>
-          <a href="{% url 'account_signup' %}" class="btn btn-primary ml-2">Sign up</a>
+          <a href="{% url 'account_login' %}" class="btn btn-outline-secondary">{% trans "Sign In" %}</a>
+          {% if open_user_registration %}
+          <a href="{% url 'account_signup' %}" class="btn btn-primary ml-2">{% trans "Signup" %}</a>
+          {% endif %}
         </form>
         {% endif %}
       </nav>
     </div>
+    {% endblock main %}
   </main>
 
   <div class="container">
+    <div class="pb-4"></div>
     {% block content %}
-      <p>Default content...</p>
+    <h1>エラー</h1>
+  
+    <br>
+  
+    <p>テンプレートがレンダリングされませんでした。</p>
     {% endblock content %}
   </div>
 
+<!-- 
   <footer class="footer">
     <div class="container">
       <span class="text-muted">Footer...</span>
     </div>
   </footer>
+ -->
 
 
 
   {% block javascript %}
   <!-- Bootstrap JavaScript -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+  <!-- Font Awesome JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/js/fontawesome.min.js" integrity="sha256-1lGQuZh8a4EiccMxEc18J0h4nhr5oCmXEXPzca+Lbrk=" crossorigin="anonymous"></script>
 
   <!-- 3rd party JavaScript -->
 
   <!-- Project JS -->
   <script src="{% static 'js/base.js' %}"></script>
-
   {% endblock javascript %}
 
 </body>
