--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,14 +1,27 @@
 {% extends '_base.html' %}
 {% load crispy_forms_tags %}
+{% load i18n %}
 
-{% block title %}Log in{% endblock %}
+{% block title %}{% trans "Sign In" %}｜{{ site_title }}{% endblock %}
 
 {% block content %}
-<h2>Log in</h2>
+<h1>{% trans "Sign In" %}</h1>
+<br>
 <form method="post">
   {% csrf_token %}
   {{ form|crispy }}
-  <button class="btn btn-success" type="submit">Log in</button>
+  <br>
+  <button class="btn btn-success" type="submit" style="margin-right: 15px;">{% trans "Sign In" %}</button>
+  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+  {% if open_user_registration %}
+  <br><br>
+<!-- 
+  <p>{% blocktrans %}If you have not created an account yet, then please
+  <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+ -->
+  <!-- 日本語表記 -->
+  <p>アカウントをお持ちでない場合は <a href="{{ signup_url }}">ユーザー登録</a> してください。</p>
+  <!-- 日本語表記 -->
+  {% endif %}
 </form>
-<a href="{% url 'account_reset_password' %}">Forgot Password?</a>
 {% endblock content %}
