--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -1,13 +1,17 @@
 {% extends '_base.html' %}
 {% load crispy_forms_tags %}
+{% load i18n %}
 
-{% block title %}Change Password{% endblock %}
+{% block title %}{% trans "Change Password" %}｜{{ site_title }}{% endblock %}
 
 {% block content %}
-<h2>Change Password</h2>
+<h1>{% trans "Password" %}</h1>
+<br>
 <form method="post" action="{% url 'account_change_password' %}">
   {% csrf_token %}
   {{ form|crispy }}
-  <button class="btn btn-success" type="submit">Change Password</button>
+  <br>
+  <button class="btn btn-success" type="submit" style="margin-right: 15px;">{% trans "Change Password" %}</button>
+  <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
 </form>
 {% endblock content %}
