--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -1,22 +1,26 @@
 {% extends '_base.html' %}
 {% load crispy_forms_tags %}
+{% load i18n %}
 
-{% block title %}Change Password{% endblock title %}
+{% block title %}{% trans "Password Reset" %}｜{{ site_title }}{% endblock title %}
 
 {% block content %}
-  <h1>{% if token_fail %}Bad Token{% else %}Change Password{% endif %}</h1>
+  <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Password Reset" %}{% endif %}</h1>
+  <br>
 
   {% if token_fail %}
-    <p>The password reset link was invalid. Perhaps it has already been used?  Please request a <a href="{% url 'account_reset_password' %}">new password reset</a>.</p>
+    {% url 'account_reset_password' as passwd_reset_url %}
+    <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
   {% else %}
     {% if form %}
-      <form method="POST" action=".">
+      <form method="post" action=".">
           {% csrf_token %}
           {{ form|crispy }}
-          <button class="btn btn-primary" type="submit">Change Password</button>
+          <br>
+          <button class="btn btn-success" type="submit">{% trans 'change password' %}</button>
       </form>
     {% else %}
-        <p>Your password is now changed.</p>
+        <p>{% trans 'Your password is now changed.' %}</p>
     {% endif %}
   {% endif %}
 {% endblock content%}
